@@ -1,5 +1,15 @@
 useDynLib(Rcpp, 
-    CppField__get, CppField__set
+    as_character_externalptr,
+    
+    CppField__get, CppField__set,
+    
+    Class__name,
+    
+    CppClass__complete, CppClass__methods,
+    
+    Module__classes_info,Module__complete,Module__get_class,
+    Module__has_class,Module__has_function,Module__functions_arity,
+    Module__name
 )
 
 import( methods )
